# integer-encoding-rs

./: .travis.yml  Cargo.toml  README.md  index.html
.github/workflows/: test.yml
benches/: main.rs
doc/: search-index.js
doc/implementors/integer_encoding/: trait.FixedInt.js  trait.VarInt.js
doc/integer_encoding/: index.html  sidebar-items.js  trait.FixedInt.html  trait.FixedIntReader.html  trait.FixedIntWriter.html  trait.VarInt.html  trait.VarIntReader.html  trait.VarIntWriter.html
doc/src/integer_encoding/: fixed.rs.html  fixed_tests.rs.html  lib.rs.html  varint.rs.html  varint_tests.rs.html
doc/src/integer_encoding/src/: fixed.rs.html  fixed_tests.rs.html  lib.rs.html  reader.rs.html  varint.rs.html  varint_tests.rs.html  writer.rs.html
examples/: encode_varint_from_stdin.rs
examples/encode-varint-stdin/: Cargo.toml
examples/encode-varint-stdin/src/: main.rs
examples/read-write-file/: Cargo.toml
examples/read-write-file/src/: main.rs
fixed/: sidebar-items.js
fuzz/: Cargo.toml
fuzz/fuzz_targets/: varint.rs
src/: fixed.rs  fixed_tests.rs  lib.rs  reader.rs  varint.rs  varint_tests.rs  writer.rs
varint/: sidebar-items.js
